# flexnetos_github_app

./: .gitignore  Cargo.toml  HANDOFF.md  README.md
crates/app-cli/: Cargo.toml
crates/app-cli/src/: main.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: dispatch.rs  error.rs  jwt.rs  lib.rs  manifest.rs  merge_gate.rs  mint.rs  router.rs  webhook.rs
crates/app-server/: Cargo.toml
crates/app-server/src/: main.rs
scripts/bootstrap/: .gitignore  README.md  auto-approve.mjs  bootstrap.sh  login.mjs  package-lock.json  package.json  tunnel.sh  warm-sudo.mjs
