[package]
name = "app-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "flexnetos_github_app operator CLI (fxapp)"

[[bin]]
name = "fxapp"
path = "src/main.rs"

[dependencies]
app-core = { path = "../app-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
