[package]
name = "app-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "flexnetos_github_app core: webhook verify, App-JWT, envctl token-mint seam, merge-gate, router"

[dependencies]
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
jsonwebtoken = "9"
